...
            "state" : "translated",
            "value" : "Готуємо словник"
          }
        }
      }
    },
    "Готово" : {
      "localizations" : {
        "uk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Готово"
          }
...
            "state" : "translated",
            "value" : "жіночий рід"
          }
        }
      }
    },
    "Закончить" : {
      "localizations" : {
        "uk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Закінчити"
          }
...
            "state" : "translated",
            "value" : "Закінчити сесію?"
          }
        }
      }
    },
    "Закрыть сессию" : {
      "localizations" : {
        "uk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Закрити сесію"
          }
...
            "state" : "translated",
            "value" : "Колоди"
          }
        }
      }
    },
    "Легко" : {
      "localizations" : {
        "uk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Легко"
          }
...
            "state" : "translated",
            "value" : "Налаштування"
          }
        }
      }
    },
    "Начать" : {
      "localizations" : {
        "uk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Почати"
          }
        }
      }
    },
    "Не знаю" : {
      "localizations" : {
...
            "state" : "translated",
            "value" : "Повторити"
          }
        }
      }
    },
    "Показать ответ" : {
      "localizations" : {
        "uk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Показати відповідь"
          }
...
            "state" : "translated",
            "value" : "Сесія"
          }
        }
      }
    },
    "Сессия завершена" : {
      "localizations" : {
        "uk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Сесію завершено"
          }
...
            "state" : "translated",
            "value" : "Наступний показ через %@"
          }
        }
      }
    },
    "Словарь" : {
      "localizations" : {
        "uk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Словник"
          }
...
            "state" : "translated",
            "value" : "Встановіть чеський голос: Налаштування → Доступність → Усний контент → Голоси"
          }
        }
      }
    },
    "Учить" : {
      "localizations" : {
        "uk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Вчити"
          }
        }
      }
    },
    "Учить вперёд" : {
      "localizations" : {
...
